[gd_scene load_steps=10 format=3 uid="uid://uw6mqx58dvn7"]

[ext_resource type="Script" path="res://GUI/gui.gd" id="1_vlt58"]
[ext_resource type="Texture2D" uid="uid://dcaon7lx0fhek" path="res://assets/sprites/gameover.png" id="2_m7tjx"]
[ext_resource type="Texture2D" uid="uid://bu0wo7rrn44q6" path="res://assets/sprites/message.png" id="3_4ku8j"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7frjt"]
atlas = ExtResource("3_4ku8j")
region = Rect2(3, 0, 178, 48)

[sub_resource type="InputEventKey" id="InputEventKey_0ns2y"]
keycode = 32

[sub_resource type="Shortcut" id="Shortcut_drnuk"]
events = [SubResource("InputEventKey_0ns2y")]

[sub_resource type="LabelSettings" id="LabelSettings_7bo11"]
font_size = 36

[sub_resource type="InputEventKey" id="InputEventKey_4v5sr"]
keycode = 32

[sub_resource type="Shortcut" id="Shortcut_e1vlw"]
events = [SubResource("InputEventKey_4v5sr")]

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vlt58")

[node name="GameName" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 1.0
offset_top = 70.0
offset_right = 1.0
offset_bottom = 118.0
grow_horizontal = 2
texture = SubResource("AtlasTexture_7frjt")
stretch_mode = 3

[node name="MenuPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -75.0
offset_right = 75.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPanel"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.5
offset_right = 50.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="StartButton" type="Button" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
shortcut = SubResource("Shortcut_drnuk")
text = "START"

[node name="ExitButton" type="Button" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "EXIT"

[node name="Score" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -36.0
offset_right = 36.0
offset_bottom = 52.0
grow_horizontal = 2
rotation = -0.0132997
text = "000"
label_settings = SubResource("LabelSettings_7bo11")
horizontal_alignment = 1

[node name="GameOver" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverImage" type="TextureRect" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -21.0
offset_right = 96.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_m7tjx")

[node name="Restart" type="Button" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.5
offset_top = 43.0
offset_right = 33.5
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
shortcut = SubResource("Shortcut_e1vlw")
text = "RESET"

[connection signal="pressed" from="MenuPanel/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MenuPanel/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="GameOver/Restart" to="." method="_on_restart_pressed"]
